force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inserted</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>