force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>