force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Clause__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Clause__c</fullName>
    <label>Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>