force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__PrevText__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PrevText__c</fullName>
    <description>The clause previous text</description>
    <label>Previous Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>