force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Text__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Text__c</fullName>
    <description>The clause text</description>
    <label>Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>