force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Clause_Approval_Email_Queue__c.field-meta.xml
<CustomField>
    <fullName>Clause_Approval_Email_Queue__c</fullName>
    <description>Field to store the assigned email queue</description>
    <label>Clause Approval Email Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>